--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@
   /* navbar */
   .navbar {
     display: flex;
-    justify-content: center;
+    justify-content: right;
     height: 50px;
-    align-items: center;
+    align-items: right;
     background-color: rgb(248, 246, 241);
     position: relative;
   }
@@ -21,6 +21,13 @@
   .navbar ul li {
     font-size: 1.1rem;
   }
+
+  .navbar ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+
+  }
   .navbar ul li a {
     padding: 5px 20px;
     text-decoration: none;
@@ -32,7 +39,7 @@
     border-bottom: 2px solid rgba(168, 66, 40, 1);
   }
   
-  /* Home section */
+  /* Hjem section */
   #home {
     display: flex;
     flex-direction: column;
@@ -43,21 +50,65 @@
     padding-top: 300px;
     padding-left: 70px;
     color: rgb(51, 72, 212);
+    background-color: rgb(248, 246, 241);
   }
   
-  #home::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: url(bg.jpg) no-repeat center center/cover;
-    height: 700px;
-    width: 100%;
-    z-index: -1;
-  }
   .heading{
     color: rgb(51, 72, 212);
     font-size: 5rem;
     font-family: 'Ultra', sans-serif;
     text-align:left;
+  }
+
+  .images{
+    width: 45%;
+    height: 80%;
+    bottom:0;
+    right: 100px;
+  }
+  .images img{
+    height: 90%;
+    position: absolute;
+    left: 70%;
+    bottom: 0%;
+    transform: translateX(-50%);
+    transition: bottom 1s, left 1s;
+  }
+
+  .images:hover .shapes{
+    bottom: 40%;
+  }
+
+  .images:hover .bgcut{
+    left: 60%;
+  }
+
+  /* Projekter section */
+  #Projekter{
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(248, 246, 241);
+  }
+
+  #Projekter h1{
+    margin: 60px;
+    color: rgb(64, 119, 73);
+  }
+
+  .gallery{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    background-color: rgb(248, 246, 241);
+  }
+  .gallery img{
+    width: 360px;
+    height: 640px;
+    padding: 10px;
+    margin: 10px;
+  }
+
+  .gallery img:hover{
+    background-color: rgb(255, 212, 93);
+    cursor: pointer;
   }
