--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@
     padding: 0;
   }
   
-  /* navbar */
+  /* Navbar */
   .navbar {
     display: flex;
     justify-content: right;
     height: 50px;
-    align-items: right;
+    align-items:end;
     background-color: rgb(248, 246, 241);
     position: relative;
   }
@@ -45,7 +45,7 @@
     flex-direction: column;
     height: 650px;
     justify-content: left;
-    align-items: left;
+    align-items: start;
     position: relative;
     padding-top: 300px;
     padding-left: 70px;
@@ -95,6 +95,12 @@
     color: rgb(64, 119, 73);
   }
 
+  .poppins-regular {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
   .gallery{
     display: flex;
     justify-content: space-around;
@@ -122,6 +128,13 @@
     padding: 20px;
     background-color: rgb(248, 246, 241);
   }
+
+  #Kompetencer p{
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
   #Kompetencer h1{
     margin: 60px;
     color: rgb(64, 119, 73);
@@ -131,7 +144,7 @@
     font-size: 3rem;
     color: rgba(168, 66, 40, 1);
   }
-  
+
   .row{
     display: flex;
     justify-content: space-around;
@@ -142,13 +155,13 @@
   .box{
     display: flex;
     flex-direction: column;
-    width: 450px;
+    width: 600px;
     height: 300px;
     border: 10px solid rgb(51, 72, 212);
     margin: 5px;
     align-items: center;
     text-align:left;
-    padding: 10px;
+    padding: 5px;
     border-radius: 15px;
     background: linear-gradient(to top, rgb(255, 212, 93) 50%, rgb(248, 246, 241) 50%);
     background-size: 100% 200%;
