--- a/style.css
+++ b/style.css
@@ -1,220 +1,344 @@
 * {
-    margin: 0;
-    padding: 0;
-  }
-  
-  /* Navbar */
-  .navbar {
-    display: flex;
-    justify-content: right;
-    height: 50px;
-    align-items:end;
-    background-color: rgb(248, 246, 241);
-    position: relative;
-  }
-  
-  .navbar ul {
-    display: flex;
-    list-style: none;
-  }
-  
-  .navbar ul li {
-    font-size: 1.1rem;
-  }
+  margin: 0;
+  padding: 0;
+}
 
-  .navbar ul li{
-    display: inline-block;
-    list-style: none;
-    margin: 10px 20px;
+html{
+  scroll-behavior: smooth;
+}
 
-  }
-  .navbar ul li a {
-    padding: 5px 20px;
-    text-decoration: none;
-    font-family: 'Ultra', sans-serif;
-    color: rgba(168, 66, 40, 1);
-  }
-  
-  .navbar ul li a:hover {
-    border-bottom: 2px solid rgba(168, 66, 40, 1);
-  }
-  
-  /* Hjem section */
-  #home {
-    display: flex;
-    flex-direction: column;
-    height: 650px;
-    justify-content: left;
-    align-items: start;
-    position: relative;
-    padding-top: 300px;
-    padding-left: 70px;
-    color: rgb(51, 72, 212);
-    background-color: rgb(248, 246, 241);
-  }
-  
-  .heading{
-    color: rgb(51, 72, 212);
-    font-size: 5rem;
-    font-family: 'Ultra', sans-serif;
-    text-align:left;
-  }
-
-  .images{
-    width: 45%;
-    height: 80%;
-    bottom:0;
-    right: 100px;
-  }
-  .images img{
-    height: 80%;
-    position: absolute;
-    left: 70%;
-    bottom: 15%;
-    transform: translateX(-50%);
-    transition: bottom 1s, left 1s;
-  }
-
-  .images:hover .shapes{
-    bottom: 40%;
-  }
-
-  .images:hover .bgcut{
-    left: 60%;
-  }
-
-  /* Projekter section */
-  #Projekter{
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(248, 246, 241);
-  }
-
-  #Projekter h1{
-    margin: 60px;
-    color: rgb(64, 119, 73);
-  }
-
-  .poppins-regular {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-
-  .gallery{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    background-color: rgb(248, 246, 241);
-  }
-  .gallery img{
-    width: 360px;
-    height: 640px;
-    padding: 10px;
-    margin: 10px;
-    border-radius: 15px;
-  }
-
-  .gallery img:hover{
-    background-color: rgb(255, 212, 93);
-    cursor: pointer;
-    border-radius: 15px;
-  }
-
-  /* Om mig section */
-  
-#om{
-  display: flex;
-  flex-direction: column;
-  height: 800px;
+body {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: rgb(27, 32, 31);
   background-color: rgb(248, 246, 241);
 }
 
-#om h1{
+h1 {
+  font-family: 'Ultra', sans-serif;
+}
+
+h2 {
+  font-family: 'Ultra', sans-serif;
+}
+
+/* Navbar */
+.navbar {
+  display: flex;
+  justify-content: right;
+  height: 50px;
+  align-items: end;
+  background-color: rgb(248, 246, 241);
+  position: sticky;
+  top: 0;
+}
+
+.navbar ul {
+  display: flex;
+  list-style: none;
+}
+
+.navbar ul li {
+  font-size: 1.1rem;
+}
+
+.navbar ul li {
+  display: inline-block;
+  list-style: none;
+  margin: 10px 20px;
+}
+
+.navbar ul li a {
+  padding: 5px 20px;
+  text-decoration: none;
+  font-family: 'Ultra', sans-serif;
+  color: rgba(168, 66, 40, 1);
+}
+
+.navbar ul li a:hover {
+  border-bottom: 2px solid rgba(168, 66, 40, 1);
+}
+
+/* Hjem section */
+#home {
+  display: flex;
+  flex-direction: column;
+  height: 650px;
+  justify-content: left;
+  align-items: start;
+  position: relative;
+  padding-top: 300px;
+  padding-left: 70px;
+  color: rgb(51, 72, 212);
+}
+
+.heading {
+  color: rgb(51, 72, 212);
+  font-size: 5rem;
+  font-family: 'Ultra', sans-serif;
+  text-align: left;
+}
+
+.images {
+  width: 45%;
+  height: 80%;
+  bottom: 0;
+  right: 100px;
+}
+
+.images img {
+  height: 80%;
+  position: absolute;
+  left: 70%;
+  bottom: 15%;
+  transform: translateX(-50%);
+  transition: bottom 1s, left 1s;
+}
+
+.images:hover .shapes {
+  bottom: 40%;
+}
+
+.images:hover .bgcut {
+  left: 60%;
+}
+
+/* Projekter section */
+#Projekter {
+  display: flex;
+  flex-direction: column;
+}
+
+#Projekter h1 {
+  margin: 60px;
+  color: rgb(64, 119, 73);
+}
+
+.wrapper {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0 60px;
+}
+
+.wrapper .container {
+  padding-top: 10px;
+  box-sizing: border-box;
+}
+
+.wrapper .container .hero-section {
+  width: 100%;
+  margin: 20px auto;
+  padding-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  box-sizing: border-box;
+}
+
+.wrapper .container .hero-section .gallery {
+  width: 100%;
+  position: relative;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.wrapper .container .hero-section .gallery .image-section {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.wrapper .container .hero-section .gallery .image-section img {
+  width: 100%;
+  height: auto;
+  border-radius: 15px;
+  display: block;
+  box-sizing: border-box;
+}
+
+.wrapper .container .hero-section .gallery .caption {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  padding: 15px;
+  bottom: 0;
+  left: 0;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+  flex-direction: column;
+  background-color: rgb(255, 212, 93);
+  color: black;
+  transition: transform .8s ease;
+  transform: translateY(100%);
+  box-sizing: border-box;
+}
+
+.wrapper .container .hero-section .gallery:hover .caption {
+  transform: translateY(0);
+  border: 10px solid rgb(255, 212, 93);
+  border-radius: 15px;
+  box-sizing: border-box;
+}
+
+/* Om mig section */
+#om {
+  display: flex;
+  flex-direction: column;
+  height: 800px;
+}
+
+#om h1 {
   color: rgba(168, 66, 40, 1);
   margin: 60px;
 }
 
-#om p{
+#om p {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
-.om{
+.om {
   display: flex;
 }
 
-.om img{
+.om img {
   width: 600px;
   height: 600px;
   padding: 0px 60px;
 }
 
-.navn{
+.navn {
   padding: 10px;
 }
-.navn h2{
+
+.navn h2 {
   font-size: 3rem;
   font-family: 'ultra', sans-serif;
   color: rgb(51, 72, 212);
 }
 
-
-
-  /* Kompetencer section */
-  #Kompetencer{
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    background-color: rgb(248, 246, 241);
-  }
-
-  #Kompetencer p{
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-
-  #Kompetencer h1{
-    margin: 60px;
-    color: rgb(64, 119, 73);
-  }
-  #Kompetencer h2{
-    margin: 15px;
-    font-size: 3rem;
-    color: rgba(168, 66, 40, 1);
-  }
-
-  .row{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    box-sizing: border-box;
-    background-color: rgb(248, 246, 241);
-  }
-  .box{
-    display: flex;
-    flex-direction: column;
-    width: 600px;
-    height: 300px;
-    border: 10px solid rgb(51, 72, 212);
-    margin: 5px;
-    align-items: center;
-    text-align:left;
-    padding: 5px;
-    border-radius: 15px;
-    background: linear-gradient(to top, rgb(255, 212, 93) 50%, rgb(248, 246, 241) 50%);
-    background-size: 100% 200%;
-    transition: all .8s;
-  }
-  
-.box:hover{
-    background-position: left bottom;
+/* Kompetencer section */
+#Kompetencer {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
 }
-.box img{
-    width: 80px;
-    height: 80px;
+
+#Kompetencer p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+#Kompetencer h1 {
+  margin: 60px;
+  color: rgb(64, 119, 73);
+}
+
+#Kompetencer h2 {
+  margin: 15px;
+  font-size: 3rem;
+  color: rgba(168, 66, 40, 1);
+}
+
+.row {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  background-color: rgb(248, 246, 241);
+}
+
+.box {
+  display: flex;
+  flex-direction: column;
+  width: 600px;
+  height: 300px;
+  border: 10px solid rgb(51, 72, 212);
+  margin: 5px;
+  align-items: center;
+  text-align: left;
+  padding: 5px;
+  box-sizing: border-box;
+  border-radius: 15px;
+  background: linear-gradient(to top, rgb(51, 72, 212) 50%, rgb(248, 246, 241) 50%);
+  background-size: 100% 200%;
+  transition: all .8s;
+}
+
+.box:hover {
+  background-position: left bottom;
+  color: rgb(248, 246, 241);
+  box-sizing: border-box;
+}
+
+.box img {
+  width: 80px;
+  height: 80px;
+}
+
+.box:hover h2 {
+  color: rgb(248, 246, 241);
+}
+
+.box:hover p {
+  color: rgb(248, 246, 241);
+}
+
+/* Kontakt section */
+#contact{
+  display: flex;
+  flex-direction: column;
+}
+
+#contact h1{
+  margin: 60px;
+}
+
+.form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.input{
+  padding: 15px 20px;
+  margin: 15px;
+  width: 50%;
+  border: 10px solid rgb(27, 32, 31);
+  outline: none;
+  border-radius: 15px;
+}
+
+#message{
+  margin: 15px;
+  padding: 15px 20px;
+  width: 50%;
+  border: 10px solid rgb(27, 32, 31);
+  outline: none;
+  border-radius: 15px;
+}
+
+#submit{
+padding: 15px 20px;
+margin: 30px;
+width: 15%;
+border-radius: 15px;
+background-color: rgb(255, 212, 93);
+color: rgb(27, 32, 31);
+border: 10px solid rgb(27, 32, 31);
+outline: none;
+}
+
+#submit:hover{
+  background-color: rgb(27, 32, 31);
+  color: rgb(248, 246, 241);
+  cursor: pointer;
 }
 
 /* mobil */
