--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ h2 {
   background-color: rgb(248, 246, 241);
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
 .navbar ul {
@@ -228,21 +229,24 @@ h2 {
   padding: 20px;
 }
 
-#Kompetencer p {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
 #Kompetencer h1 {
-  margin: 60px;
+  margin: 60px 0;
   color: rgb(64, 119, 73);
+  text-align: left;
 }
 
 #Kompetencer h2 {
-  margin: 15px;
+  margin: 15px 0;
   font-size: 3rem;
   color: rgba(168, 66, 40, 1);
+  text-align: center;
+}
+
+#Kompetencer h2:hover {
+  margin: 15px 0;
+  font-size: 3rem;
+  color: rgb(248, 246, 241)
+  text-align: center;
 }
 
 .row {
@@ -251,18 +255,20 @@ h2 {
   flex-wrap: wrap;
   box-sizing: border-box;
   background-color: rgb(248, 246, 241);
+  padding: 20px;
 }
 
 .box {
   display: flex;
   flex-direction: column;
+  justify-content: flex-start; 
+  align-items: center; 
   width: 600px;
-  height: 300px;
+  height: 500px;
   border: 10px solid rgb(51, 72, 212);
-  margin: 5px;
-  align-items: center;
+  margin: 20px; 
   text-align: left;
-  padding: 5px;
+  padding: 20px; 
   box-sizing: border-box;
   border-radius: 15px;
   background: linear-gradient(to top, rgb(51, 72, 212) 50%, rgb(248, 246, 241) 50%);
@@ -273,21 +279,43 @@ h2 {
 .box:hover {
   background-position: left bottom;
   color: rgb(248, 246, 241);
-  box-sizing: border-box;
 }
 
 .box img {
   width: 80px;
   height: 80px;
+  margin-bottom: 20px;
 }
 
-.box:hover h2 {
-  color: rgb(248, 246, 241);
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 100%; 
 }
 
-.box:hover p {
-  color: rgb(248, 246, 241);
+li {
+  padding-left: 0;
+  margin: 10px 0; 
+  line-height: 1.5em; 
+  position: relative; 
 }
+
+#Kompetencer li:before {
+  content: "*";
+  padding-right: 5px;
+  font-family: 'Ultra', sans-serif;
+  font-size: 2rem;
+  color: rgba(168, 66, 40, 1);
+  position: absolute;
+  left: 0;
+  transform: translateY(0.2em);
+}
+
+li span {
+  padding-left: 2em;
+}
+
 
 /* Kontakt section */
 #contact{
